fix(lyrics-plus): backing vocals overlap & issues

--- a/CustomApps/lyrics-plus/style.css
+++ b/CustomApps/lyrics-plus/style.css
@@ -313,10 +313,6 @@ div.lyrics-tabBar-headerItemLink {
 	background-position: top left !important;
 }
 
-.lyrics-lyricsContainer-LyricsLine:hover .lyrics-lyricsContainer-Karaoke-Word {
-	background-position: top left;
-}
-
 .lyrics-lyricsContainer-Karaoke-Word {
 	color: var(--lyrics-color-inactive);
 	background-image: linear-gradient(
@@ -774,5 +770,4 @@ div.lyrics-tabBar-headerItemLink {
 	font-size: 0.6em;
 	opacity: 0.7;
 	line-height: 1.2em;
-	/* color: var(--lyrics-color-inactive); */
 }
